--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
