--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-rating": "^2.0.5",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.5",
