--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-rating": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
