--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.36.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,14 +23,17 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-rating": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-expire-in": "^1.1.2",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.4.41",
     "web-vitals": "^2.1.4"
