--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
