--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
